@@ -73,6 +73,7 @@ k_dcop:
    virtual void volumeUp() = 0;                             ///< Increase volume by a reasonable step.
    virtual void volumeDown() = 0;                           ///< Decrease volume by a reasonable step.
    virtual void mute() = 0;                                 ///< Toggle mute.
+   virtual void setEqualizerEnabled( bool active ) = 0;                                 ///< Toggle equalizer.
    virtual void enableOSD(bool enable) = 0;                 ///< Switch OSD display on or off.
    virtual void showOSD() = 0;                              ///< Show the OSD display on the screen.
 
